# MouseBase-AI

./: .dockerignore  .gitignore  README.md  vercel.json
.github/workflows/: backend.yml  ci.yml
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  check_db.py  check_db2.py  check_db3.py  check_db_sync.py  docker-compose.yml  entrypoint.sh  pyproject.toml  test_models.py
backend/app/: main.py
backend/app/core/: config.py  limits.py  log_config.py  middleware.py  plan_enforcer.py  security.py
backend/app/database/: check_connection.py  database.py  session.py  test_connection.py
backend/app/db/: database.py  dependencies.py
backend/app/dependencies/: auth.py
backend/app/exceptions/: auth.py  base.py  embedding.py  memory.py  project.py  update.py
backend/app/models/: __init__.py  activity.py  embedding.py  memory.py  payment.py  project.py  session.py  subscription.py  usage.py  user.py  webhook_event.py
backend/app/routers/: auth.py  dashboard.py  data.py  explorer.py  memory.py  payments.py  projects.py  remember.py  search.py
backend/app/schemas/: auth.py  explorer.py  memory.py  payment.py  project.py  remember.py  schema.md  search.py  update.py
backend/app/services/: __init__.py  activity_service.py  auth_service.py  email_service.py  embedding_service.py  exchange_rate.py  gemini_embedding_service.py  memory_service.py  openai_embedding_service.py  payment_service.py  project_service.py  rate_limiter.py  search_service.py  subscription_service.py  usage_service.py
backend/docs/: api.md  project-history.md  python-sdk.md
backend/migrations/: env.py
backend/migrations/versions/: 01a3f4ebcb98_add_api_key_id_to_projects.py  113c31deb105_add_status_column_to_projects.py  2a3b4c5d6e7f_add_plan_to_projects.py  3c4d5e6f7g8h_add_plan_to_projects.py  3ec9751287fe_add_missing_user_columns.py  44cb37ca26cf_add_razorpay_order_id_to_payments.py  4a5b6c7d8e9f_add_billing_tables.py  583aafa764cc_create_usage_table.py  5a6b7c8d9e0f_fix_missing_billing_tables.py  81b73c131bd8_initial_schema.py  b08889e1dda0_add_last_used_at_and_api_keys_table.py  c7d8e9f0a1b2_add_indexes_and_auth_tables.py  d3fee61ccd7b_add_api_key_encrypted_to_projects.py  e4f5a6b7c8d9_create_activity_logs_table.py  f6e84e97f7a3_initial_schema.py
backend/mousebase/: __init__.py  client.py  errors.py  models.py
backend/scripts/: check_projects.py  create_dev_project.py  rotate_secrets.py  test_embedding.py
backend/tests/: conftest.py  test_auth.py  test_auth_jwt.py  test_memory.py  test_models.py  test_payments.py  test_projects.py  test_remember.py  test_root.py  test_sdk.py  test_search.py  test_validation.py
docs/: api.md  authentication.md  billing.md  changelog.md  deployment.md  docker.md  index.md  installation.md  projects.md  python-sdk.md  remember.md  roadmap-detailed.md  search.md  update-delete.md
docs/.vitepress/: config.js
docs/guide/: authentication.md  errors.md  faq.md  introduction.md  js-sdk.md  projects.md  python-sdk.md  quickstart.md  remember.md  search.md
examples/: ai_agent.py  basic.py  chatbot.py  customer_support.py  rag.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/public/: robots.txt  sitemap.xml
frontend/public/.well-known/: security.txt
frontend/src/: App.tsx  index.css
frontend/src/components/: ApiKeyModal.tsx  Footer.tsx  MemoryInspector.tsx  MemoryTable.tsx  Navbar.tsx  PublicNav.tsx  SEO.tsx  SearchBox.tsx  Sidebar.tsx  Skeleton.tsx
frontend/src/lib/: api.ts  useTheme.ts  utils.ts
frontend/src/pages/: Analytics.tsx  Billing.tsx  Blog.tsx  Changelog.tsx  Dashboard.tsx  Data.tsx  DataDeletion.tsx  DataRetention.tsx  Documentation.tsx  ExportData.tsx  Landing.tsx  LegalPage.tsx  Login.tsx  MemoryExplorer.tsx  NotFound.tsx  Playground.tsx  Pricing.tsx  ProjectDetail.tsx  Projects.tsx  RefundPolicy.tsx  Roadmap.tsx  Search.tsx  Settings.tsx  Signup.tsx  Status.tsx  TrustCenter.tsx
frontend/src/pages/company/: About.tsx  Careers.tsx  Contact.tsx
frontend/src/pages/legal/: AUP.tsx  Cookies.tsx  DPA.tsx  Privacy.tsx  Security.tsx  Subprocessors.tsx  Terms.tsx
frontend/src/test/: Login.test.tsx  Signup.test.tsx  api.test.ts  payments.test.tsx  setup.ts
mousebase/: README.md  pyproject.toml
mousebase/examples/: agent_memory.py  customer_support.py  discord.py  notes.py  notion.py  rag.py
mousebase/src/mousebase/: __init__.py  async_client.py  client.py  errors.py  models.py
mousebase/src/mousebase/integrations/: __init__.py  crewai_memory.py  langchain_memory.py  llama_index_memory.py  openai_agents_memory.py
mousebase/tests/: conftest.py  test_client.py
