[project]
name = "mousebase-backend"
version = "0.1.0"
description = "Persistent memory infrastructure for AI applications."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "MouseBase" }]
license = { text = "Proprietary" }
keywords = ["mousebase", "memory", "ai", "sdk", "httpx"]

dependencies = [
    "fastapi",
    "uvicorn",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "sqlalchemy",
    "psycopg[binary]",
    "alembic",
    "pgvector",
    "python-dotenv",
    "pydantic-settings",
    "openai>=2.44.0",
    "google-genai>=2.10.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.0.0",
    "redis>=5.0.0",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "black>=26.5.1",
    "ruff>=0.12.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*", "mousebase*"]
exclude = [
    "tests*",
    "migrations*",
    "temp_migrations*",
]

[tool.setuptools.package-data]
mousebase = ["py.typed"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"