[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mousebase"
version = "0.2.5"
description = "Persistent memory infrastructure for AI applications"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Sankar Gopan", email = "sankargopan1@gmail.com"},
]
keywords = ["ai", "memory", "llm", "vector", "embeddings", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/Lumine8/MouseBase-AI"
Source = "https://github.com/Lumine8/MouseBase-AI"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mousebase*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "mypy>=1.10",
]
